# Snake-AI

./: .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CHECKLIST.md  ASSUMPTIONS.md  DDP_IMPLEMENTATION.md  DISTRIBUTED_TRAINING.md  EE_METHODS.md  FIX_EXPLANATION.md  QUICKSTART.md  README.md  RUNBOOK.md  analyze_results.py  pyproject.toml  requirements-gpu.txt  requirements.txt  results.ipynb  test_fix.py
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat  jsonpointer
dashboards/: app.py
results/: bc_eval.csv  bc_eval.json  ppo_eval.csv  ppo_eval.json
results/figs/: length_summary.csv  reward_summary.csv  summary.json
scripts/: export_plots.py  launch_all_gpus.ps1  launch_all_gpus.sh  launch_b200.sh  monitor_ddp.sh  profile_resources.py  smoke_test_multi_gpu.sh  smoke_test_single_gpu.sh  train_ddp.sh  validate_b200_readiness.py  validate_fixes.py  validate_syntax.py
snake_env/: __init__.py  snake_env.py  wrappers.py
supervised/: README.md  __init__.py  collect_dataset.py  dataset.py  eval_bc.py  models.py  play_bc.py  test_smoke.py  train_bc.py  utils.py
supervised/configs/: bc_base.yaml
tests/: test_config.py  test_ddp_production.py  test_ddp_smoke.py  test_distributed_smoke.py  test_env.py  test_production_smoke.py  test_training_smoke.py
tools/: hw_monitor.py  launcher_multi_gpu.py  smoke_test.py
train/: autoscale.py  ddp_utils.py  eval.py  eval_ppo_ddp.py  play.py  train_ppo.py  train_ppo_ddp.py
train/configs/: b200.yaml  base.yaml  large.yaml  small.yaml
train/configs/ablations/: frame_stacking.yaml  high_entropy.yaml  reward_shaping_distance.yaml
train/models/: __init__.py  snake_scalable_cnn.py  snake_tiny_cnn.py
